# greentic

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  README.md-old  _config.yml  entitlements.plist  generate_docs.sh  temp_print_snapshot.rs  temp_read_snapshot  temp_read_snapshot.rs  weather_bot.ygtc
.cargo/: config.toml
assets/: tandcs.html
channels/linux/: channel_mock_inout  channel_mock_middle  channel_tester  channel_ws
channels/macos_arm/: channel_mock_inout  channel_mock_middle  channel_tester  channel_ws
channels/macos_intel/: channel_mock_inout  channel_mock_middle  channel_tester  channel_ws
crates/channel_mock_inout/: Cargo.toml
crates/channel_mock_inout/src/: lib.rs  main.rs
crates/channel_mock_middle/: Cargo.toml
crates/channel_mock_middle/src/: lib.rs  main.rs
crates/channel_msgraph/: Cargo.toml
crates/channel_msgraph/src/: config.rs  graph_client.rs  main.rs  models.rs  subscriptions.rs  utils.rs  webhook.rs
crates/channel_msgraph/src/handlers/: calendar.rs  email.rs  mod.rs  onedrive.rs  sharepoint.rs  teams.rs
crates/channel_plugin/: Cargo.toml
crates/channel_plugin/src/: channel_client.rs  control_client.rs  fakse_session.rs  jsonrpc.rs  lib.rs  message.rs  plugin.rs  plugin_actor.rs  plugin_helpers.rs  plugin_manager.rs  plugin_runtime.rs  plugin_test_util.rs  pubsub_client.rs  remote_plugin.rs  runtime.rs
crates/channel_plugin/test/: greentic.creds  plugin.log.2025-08-07
crates/channel_telegram/: Cargo.toml
crates/channel_telegram/src/: lib.rs  main.rs  run_telegram.rs  telegram_plugin.rs
crates/channel_tester/: Cargo.toml
crates/channel_tester/src/: lib.rs  main.rs
crates/channel_webhook/: Cargo.toml
crates/channel_webhook/src/: auth.rs  certs.rs  main.rs  oauth.rs
crates/channel_ws/: Cargo.toml
crates/channel_ws/logs/: plugin.log.2025-06-30
crates/channel_ws/src/: lib.rs  main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLUGIN.md  PROCESSES.md  SECURITY.md  TELEGRAM.md  TOOLS.md  VISION.md
flows/running/: first.greentic
flows/stopped/: sample.greentic
greentic/: LICENSE
greentic-bak/flows/running/: mock_tester.ygtc
greentic-bak/flows/stopped/: test_telegram.ygtc
greentic-bak/logs/: greentic-init.log.2025-07-14  greentic-schema.log.2025-07-14  greentic-validation.log.2025-07-09  greentic-validation.log.2025-07-14  greentic_events.log.2025-07-11  greentic_events.log.2025-07-14  greentic_logs.log.2025-07-11  greentic_logs.log.2025-07-14  plugin.log.2025-07-11  plugin.log.2025-07-14
greentic-bak/logs/greentic-schema.log/: plugin.log.2025-07-14  schema.log.2025-07-14
greentic-bak/schemas/: channel-mock.schema.json  channel-telegram.schema.json  channel-ws.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_add_allowlist_entry/: tool-cockroachdb_cockroach_cloud_add_allowlist_entry.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_add_allowlist_entry2/: tool-cockroachdb_cockroach_cloud_add_allowlist_entry2.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_add_egress_rule/: tool-cockroachdb_cockroach_cloud_add_egress_rule.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_add_jwt_issuer/: tool-cockroachdb_cockroach_cloud_add_jwt_issuer.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_add_private_endpoint_connection/: tool-cockroachdb_cockroach_cloud_add_private_endpoint_connection.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_create_database/: tool-cockroachdb_cockroach_cloud_create_database.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_create_folder/: tool-cockroachdb_cockroach_cloud_create_folder.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_create_private_endpoint_services/: tool-cockroachdb_cockroach_cloud_create_private_endpoint_services.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_create_service_account/: tool-cockroachdb_cockroach_cloud_create_service_account.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_create_user/: tool-cockroachdb_cockroach_cloud_create_user.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_delete_api_key/: tool-cockroachdb_cockroach_cloud_delete_api_key.schema.json
greentic-bak/schemas/tool-cockroachdb_cockroach_cloud_delete_client_ca_cert/: tool-cockroachdb_cockroach_cloud_delete_client_ca_cert.schema.json
greentic-bak/secrets/: .env-sample
greentic/schemas/: flow.schema.json
greentic/secrets/: .env-sample
greentic/tests/: simple_tester.test  simple_tester.ygtc
logs/: greentic_events.log.2025-05-27  greentic_logs.log.2025-05-27
schemas/: channel-telegram.schema.json  flow.schema.json
schemas/tool-weather_api_future_weather/: tool-weather_api_future_weather.schema.json
schemas/tool-weather_api_history_weather/: tool-weather_api_history_weather.schema.json
schemas/tool-weather_api_marine_weather/: tool-weather_api_marine_weather.schema.json
schemas/tool-weather_api_search_autocomplete_weather/: tool-weather_api_search_autocomplete_weather.schema.json
secrets/: .env
src/: agent.rs  apps.rs  config.rs  executor.rs  flow.rs  flow_commands.rs  lib.rs  logger.rs  main.rs  mapper.rs  message.rs  node.rs  process.rs  runtime_snapshot.rs  schema.rs  secret.rs  state.rs  transformer.rs  util.rs  validate.rs  watcher.rs
src/agent/: agent.rs  agent_reply_schema.rs  json_schema.rs  manager.rs  mod.rs  ollama.rs  openai.rs
src/channel/: flow_router.rs  manager.rs  mod.rs  node.rs  plugin.rs  wrapper.rs
src/cli/: config.rs  export.rs  flow.rs  init.rs  mod.rs  run.rs  schema.rs  secrets.rs  snapshot.rs
src/flow/: flow_test.rs  manager.rs  mod.rs  session.rs  state.rs
src/process/: debug_process.rs  manager.rs  mod.rs  process.rs  qa_process.rs  script_process.rs  template_process.rs
src/snapshot/: mod.rs
tests/: flow_test.rs  snapshot_validate.rs
tests/wasm/mock_tool/: Cargo.toml
tests/wasm/mock_tool/src/: lib.rs
(+239 files in other folders)
