[package]
name = "greentic"
version = "0.1.1"
authors = ["maarten <maarten@greentic.com>"]
description = "The fastest, most secure and extendable agentic platform"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic"
edition = "2024"

[workspace]
members = [
    "crates/channel_plugin", 
    "crates/channel_telegram",
    "crates/channel_mock_inout", 
    "crates/channel_mock_middle", 
    "crates/xtask",
]


[dependencies]
channel_plugin = { version="0.1.1", path = "crates/channel_plugin"}
async-trait = "0.1.88"
schemars = { version = "0.8.22", features = ["chrono"] } 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt", "sync", "time", "signal"] }
typetag = "0.2.20"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "trace",] }
tracing-opentelemetry =  "0.30.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "std", "json"] }
tracing-appender = "0.2.3"
wasm-bindgen = "0.2.100" # For WASM compatibility
dotenvy = "0.15.7"
anyhow = "1.0.98"
rand = "0.9.1"
wasmtime = "33.0.0"
wasmtime-wasi = "33.0.0"
wasmtime-wasi-http = "33.0.0"
notify = "8.0.0"
futures-util = "0.3.31"
jsonschema = "0.30.0"
axum = "0.8.4"
axum-server = {version="0.7.2", features=["tls-rustls"]}
tokio-rustls = "0.26.2"
rustls = "0.23.27"
once_cell = "1.21.3"
dashmap = "6.1.0"
tempfile = "3.20.0"
uuid = { version = "1.17.0", features = ["v4"] }
handlebars = "6.3.2"
chrono = { version = "0.4", features = ["serde"] }
libloading = "0.8.7"
futures = "0.3.31"
clap = { version = "4.5.38", features = ["derive"] }
lazy_static = "1.5.0"
petgraph = { version = "0.8.1", features = ["serde"] }
atomic_refcell = "0.1.13"
crossbeam-utils = "0.8.21"
opentelemetry-appender-tracing = "0.30.0"
thiserror = "2.0.12"

