[package]
name = "greentic"
version = "0.2.0-rc1"
authors = ["maarten <maarten@greentic.com>"]
description = "The fastest, most secure and extendable digital workforce platform"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic"
edition = "2024"

[workspace]
members = [
    "crates/channel_plugin", 
    "crates/channel_telegram",
    "crates/channel_mock_inout", 
    "crates/channel_mock_middle",
    "crates/channel_tester", 
    "crates/channel_ws",
    "crates/xtask", "tests/wasm/mock_tool",
]


[dependencies]
channel_plugin = { version="0.2.0", path = "crates/channel_plugin"}
schemars = { version = "1.0.3", features = ["chrono04"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt", "sync", "time", "signal"] }
typetag = "0.2.20"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "trace",] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "std", "json"] }
tracing-appender = "0.2.3"
dotenvy = "0.15.7"
anyhow = "1.0.98"
rand = "0.9.1"
wasmtime = "33.0.1"
wasmtime-wasi = "33.0.1"
wasmtime-wasi-http = "33.0.1"
notify = "8.1.0"
futures-util = "0.3.31"
jsonschema = "0.30.0"
once_cell = "1.21.3"
dashmap = {version="6.1.0", features = ["serde"]}
tempfile = "3.20.0"
uuid = { version = "1.17.0", features = ["v4"] }
handlebars = "6.3.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
clap = { version = "4.5.41", features = ["derive"] }
lazy_static = "1.5.0"
petgraph = { version = "0.8.1", features = ["serde"] }
crossbeam-utils = "0.8.21"
opentelemetry-appender-tracing = "0.30.0"
thiserror = "2.0.12"
ollama-rs = "0.3.2"
url = { version="2.5.4", features = ["serde"] }
serde_yaml_bw = "2.0.1"
rhai = { version="1.22.2", features = ["serde"] }
regex = "1.11.1"
tokio-util = "0.7.15"
moka = { version = "0.12.10", features = ["future"] }
chrono-english = "0.1.7"
reqwest = "0.12.22"
async-trait = "0.1.88"

[dev-dependencies]
url = "2.5.4"
channel_plugin = { version="0.2.0", path = "crates/channel_plugin" , features = ["test-utils"]}

