[package]
name = "channel_mock_middle"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["rlib","cdylib"]

[dependencies]
channel_plugin = { version = "0.1.2", path = "../channel_plugin" }
anyhow = "1.0.98"
serde_json = "1.0.140"
tracing = "0.1.41"
async-trait = "0.1.88"
async-ffi = "0.5.0"
tokio = { version = "1.45.1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time"] }
dashmap = "6.1.0"
once_cell = "1.21.3"