[package]
name = "channel_mock_middle"
version = "0.2.0"
edition = "2024"

[dependencies]
channel_plugin = { version = "0.2.0", path = "../channel_plugin" }
anyhow = "1.0.98"
serde_json = "1.0.140"
tracing = "0.1.41"
async-trait = "0.1.88"
tokio = { version = "1.45.1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time"] }
dashmap = "6.1.0"
once_cell = "1.21.3"