[package]
name = "channel_msgraph"
version = "0.2.0"
edition = "2024"

[dependencies]
# Greentic core plugin traits
channel_plugin = { version = "0.2.0", path = "../channel_plugin" }

# Async runtime and utilities
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0.12"

# HTTP + routing
axum = "0.8.4"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls", "stream"] }

# Microsoft Graph SDK
graph-rs-sdk = { version = "3.0.1" }
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest", "rustls-tls"] }


# Concurrency + shared maps
dashmap = "6.1.0"
parking_lot = "0.12"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# Cryptography (if needed for JWT or webhook verification)
jsonwebtoken = "9"
base64 = "0.22.1"
async-once-cell = "0.5.4"
futures-util = "0.3.31"
once_cell = "1.21.3"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
futures = "0.3.31"
