[package]
name = "channel_plugin"
version = "0.1.2"
authors = ["maarten <maarten@greentic.com>"]
description = "The fastest, most secure and extendable agentic platform"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic"
edition = "2024"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
anyhow = "1.0.98"
async-ffi = { version = "0.5.0", features = ["macros"] }
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }
once_cell = "1.21.3"
schemars = { version = "0.8.22", features = ["chrono"] } 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time"] }
uuid = { version = "1.17.0", features = ["v4"] }