[package]
name = "channel_plugin"
version = "0.2.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
schemars = { version = "1.0.2" }
serde_json = "1.0.140"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "sync", "process", "io-std", "io-util", "time"] }
tracing = "0.1.41"
tracing-subscriber ={ version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"
dotenvy = "0.15.7"
thiserror = "2.0.12"
strum = "0.27.1"
strum_macros = "0.27.1"

[lib]
crate-type = ["rlib"]

[dev-dependencies]
channel_plugin = { path = ".", version="0.2.0", features = ["test-utils"] }

[features]
default = []
test-utils = []
