[package]
name = "channel_telegram"
version = "0.2.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", default-features = false, features = ["macros","rustls"] }
tokio = { version = "1.46.1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time", "io-std"] }
once_cell = "1.21.3"
channel_plugin = { version = "0.2.0", path = "../channel_plugin" }
anyhow = "1.0.98"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "1.0.3" } 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
dotenvy = "0.15.7"
async-trait = "0.1.88"
dashmap = "6.1.0"
reqwest = {version="0.12.22",default-features=false, features=["rustls-tls"]}
crossbeam = "0.8.4"

[[bin]]
name = "channel_telegram"    # or "echo_bot", whatever you like
path = "src/main.rs"

[[bin]]
name = "channel_telegram_run"    # or "echo_bot", whatever you like
path = "src/run_telegram.rs"

[dev-dependencies]
async-trait = "0.1.88"
typetag = "0.2.20"
serde = { version = "1.0.219", features = ["derive"] }
