[package]
name = "channel_ws"
version = "0.2.1"
edition = "2024"


[[bin]]
name = "channel_ws"
path = "src/main.rs"


[dependencies]
channel_plugin = { version = "0.2.1", path = "../channel_plugin" }
anyhow = "1.0.98"
serde_json = "1.0.140"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
dashmap = "6.1.0"
futures-util = "0.3.31"
async-trait = "0.1.88"
tokio-tungstenite = "0.27.0"
tokio = { version = "1.45.1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time", "signal"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
