[package]
name = "mock_tool"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
wasi = "0.7.0"
wit-bindgen = "0.43.0"
base64 = "0.22.1"

[lib]
crate-type = ["cdylib"]
